--- a/app/src/main/res/layout/foodselect_item.xml
+++ b/app/src/main/res/layout/foodselect_item.xml
@@ -8,11 +8,15 @@
         android:id="@+id/foodCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_marginStart="20dp"
         android:buttonTint="#EB8C8F"
         android:text="白粥"
+        android:textColor="#424242"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
