--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@id/github_card"
         android:id="@+id/cardView5"
         android:layout_width="match_parent"
-        android:layout_height="248dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
         tools:layout_editor_absoluteX="10dp">
@@ -104,16 +104,19 @@
 
             <TextView
                 android:id="@+id/group_name"
-                android:layout_width="312dp"
-                android:layout_height="200dp"
+                android:layout_width="325dp"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="20dp"
                 android:maxLines="10"
-                android:paddingStart="5dp"
+                android:minHeight="162dp"
                 android:paddingTop="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.148"
+                app:layout_constraintBottom_toBottomOf="parent"
 
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
